[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/vehicles/well_raised.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera_level.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/burst_flame.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/sounds/vehicles/fuse_stop_burn_out_bomb_dynamite_05.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/particles/burst_flame_cpu.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/materials/vehicles/wr_wheel.material" type="Material" id=7]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/meshes/vehicles/well_raised.tres" type="ArrayMesh" id=11]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=12]
[ext_resource path="res://resources/meshes/weapon_components/light_machine_gun_wr.tres" type="ArrayMesh" id=13]
[ext_resource path="res://scenes/particles/death_explosion.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://resources/materials/weapon_components/light_machine_gun_wr.material" type="Material" id=16]
[ext_resource path="res://resources/materials/vehicles/well_raised.material" type="Material" id=17]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=20]
[ext_resource path="res://resources/fonts/PixeloidMono.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://resources/sounds/destruction/explosion_large_06.wav" type="AudioStream" id=22]
[ext_resource path="res://resources/sounds/vehicles/tyre_skid_loop_01.wav" type="AudioStream" id=23]
[ext_resource path="res://scripts/cameras_&_ui/score_label.gd" type="Script" id=24]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_01.wav" type="AudioStream" id=25]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=26]
[ext_resource path="res://scenes/particles/acid_cpu.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/particles/death_explosion_cpu.tscn" type="PackedScene" id=28]
[ext_resource path="res://scripts/vehicles/body_mesh.gd" type="Script" id=29]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.864, 0.649, 2.623, -0.864, 0.649, 2.623, 0.751, 1.162, 0.381, -0.751, 1.162, 0.381, 0.783, 1.086, -0.952, -0.783, 1.086, -0.952, 0.885, 0.689, -2.54, -0.885, 0.689, -2.54, 0.95, 0.37, -2.625, -0.95, 0.37, -2.625, 0.903, 0.153, -2.465, -0.903, 0.153, -2.465, 0.942, -0.003, -0.952, -0.942, -0.003, -0.952, 0.942, 0.01, 1.265, -0.942, 0.01, 1.265, 0.897, 0.156, 2.527, -0.897, 0.156, 2.527 )

[sub_resource type="DynamicFont" id=19]
size = 9
font_data = ExtResource( 21 )

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.159672, 0 )
collision_mask = 3
mass = 200.0
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_health = 94.0
base_engine_force = 274.4
base_boost_type = 3
nitro_force = 0.0
rocket_force = 0.0
burst_force = 3449.6
scene_resource = "res://scenes/vehicles/well_raised.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859111, 0.18458, 1.44936 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.859, 0.18458, 1.44958 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859111, 0.18458, -1.59422 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.859, 0.18458, -1.59388 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0730863, -0.230929 )
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.974, 0.9 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
physics_interpolation_mode = 1
portal_mode = 3
mesh = ExtResource( 11 )
material/0 = ExtResource( 17 )
script = ExtResource( 29 )
required_setting = 2

[node name="WheelFrontLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859111, 0.18458, 1.44936 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontLeft")
material/0 = ExtResource( 7 )
script = ExtResource( 26 )
required_setting = 4
wheel_path = NodePath("../../WheelFrontLeft")

[node name="WheelFrontRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.859, 0.18458, 1.44958 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontRight")
material/0 = ExtResource( 7 )
script = ExtResource( 26 )
required_setting = 4
wheel_path = NodePath("../../WheelFrontRight")

[node name="WheelBackLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.859111, 0.18458, -1.59422 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackLeft")
material/0 = ExtResource( 7 )
script = ExtResource( 26 )
required_setting = 4
wheel_path = NodePath("../../WheelBackLeft")

[node name="WheelBackRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.859, 0.18458, -1.59388 )
portal_mode = 3
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackRight")
material/0 = ExtResource( 7 )
script = ExtResource( 26 )
required_setting = 4
wheel_path = NodePath("../../WheelBackRight")

[node name="MGMeshLeft" type="MeshInstance" parent="Body"]
transform = Transform( 0.99088, 0, 0.134747, 0, 1, 0, -0.134747, 0, 0.99088, 0.352, 0.982, 1.056 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 16 )
script = ExtResource( 12 )
required_setting = 4

[node name="MuzzleFlash" type="Spatial" parent="Body/MGMeshLeft"]

[node name="Particles" parent="Body/MGMeshLeft/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -1.49012e-08, 0, 1.00959 )

[node name="CPUParticles" parent="Body/MGMeshLeft/MuzzleFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49012e-08, 0, 1.00959 )

[node name="ShotPosition" type="RayCast" parent="Body/MGMeshLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.981379 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="CartridgeExit" type="Position3D" parent="Body/MGMeshLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152788, 0.0375992, 0.144964 )

[node name="MGMeshMiddle" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982433, 1.09124 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 16 )
script = ExtResource( 12 )
required_setting = 4

[node name="MuzzleFlash" type="Spatial" parent="Body/MGMeshMiddle"]

[node name="Particles" parent="Body/MGMeshMiddle/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 1.00959 )

[node name="CPUParticles" parent="Body/MGMeshMiddle/MuzzleFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.00959 )

[node name="ShotPosition" type="RayCast" parent="Body/MGMeshMiddle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.981379 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="CartridgeExit" type="Position3D" parent="Body/MGMeshMiddle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152788, 0.0375992, 0.144964 )

[node name="MGMeshRight" type="MeshInstance" parent="Body"]
transform = Transform( 0.99088, 0, -0.134747, 0, 1, 0, 0.134747, 0, 0.99088, -0.351845, 0.982433, 1.05637 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 16 )
script = ExtResource( 12 )
required_setting = 4

[node name="MuzzleFlash" type="Spatial" parent="Body/MGMeshRight"]

[node name="Particles" parent="Body/MGMeshRight/MuzzleFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -1.49012e-08, 0, 1.00959 )

[node name="CPUParticles" parent="Body/MGMeshRight/MuzzleFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49012e-08, 0, 1.00959 )

[node name="ShotPosition" type="RayCast" parent="Body/MGMeshRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.981379 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="CartridgeExit" type="Position3D" parent="Body/MGMeshRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152788, 0.0375992, 0.144964 )

[node name="ScoreLabel" type="Label3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
portal_mode = 3
pixel_size = 0.003
billboard = 1
double_sided = false
fixed_size = true
font = SubResource( 19 )
script = ExtResource( 24 )

[node name="ShotgunPositionFrontLeft" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.920094, 0.66275, 0.591818 )

[node name="ShotPositionUpLeft" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.997564, 0.00486597, -0.0695866, 0, 0.997564, 0.0697565, 0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUpRight" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.997564, -0.00486597, 0.0695866, 0, 0.997564, 0.0697565, -0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownLeft" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.997564, -0.00486597, -0.0695866, 0, 0.997564, -0.0697565, 0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownRight" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.997564, 0.00486597, 0.0695866, 0, 0.997564, -0.0697565, -0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionFrontRight" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.92, 0.663, 0.592 )

[node name="ShotPositionUpLeft" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.997564, 0.00486597, -0.0695866, 0, 0.997564, 0.0697565, 0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUpRight" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.997564, -0.00486597, 0.0695866, 0, 0.997564, 0.0697565, -0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownLeft" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.997564, -0.00486597, -0.0695866, 0, 0.997564, -0.0697565, 0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownRight" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.997564, 0.00486597, 0.0695866, 0, 0.997564, -0.0697565, -0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionBackLeft" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.895636, 0.741728, -1.23541 )

[node name="ShotPositionUpLeft" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.997564, 0.00486597, -0.0695866, 0, 0.997564, 0.0697565, 0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUpRight" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.997564, -0.00486597, 0.0695866, 0, 0.997564, 0.0697565, -0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownLeft" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.997564, -0.00486597, -0.0695866, 0, 0.997564, -0.0697565, 0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownRight" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.997564, 0.00486597, 0.0695866, 0, 0.997564, -0.0697565, -0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionBackRight" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.896, 0.742, -1.235 )

[node name="ShotPositionUpLeft" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.997564, 0.00486597, -0.0695866, 0, 0.997564, 0.0697565, 0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionUpRight" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.997564, -0.00486597, 0.0695866, 0, 0.997564, 0.0697565, -0.0697565, -0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionBackRight"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownLeft" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.997564, -0.00486597, -0.0695866, 0, 0.997564, -0.0697565, 0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDownRight" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.997564, 0.00486597, 0.0695866, 0, 0.997564, -0.0697565, -0.0697565, 0.0695866, 0.995134, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunFlashLeft" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/ShotgunFlashLeft" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.943789, 0.66275, 0.591818 )

[node name="Particles2" parent="Body/ShotgunFlashLeft" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.919331, 0.741728, -1.23541 )

[node name="CPUParticles" parent="Body/ShotgunFlashLeft" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.943789, 0.66275, 0.591818 )

[node name="CPUParticles2" parent="Body/ShotgunFlashLeft" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.919331, 0.741728, -1.23541 )

[node name="ShotgunFlashRight" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/ShotgunFlashRight" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.944, 0.66275, 0.591818 )

[node name="Particles2" parent="Body/ShotgunFlashRight" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.919, 0.741728, -1.23541 )

[node name="CPUParticles" parent="Body/ShotgunFlashRight" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.944, 0.66275, 0.591818 )

[node name="CPUParticles2" parent="Body/ShotgunFlashRight" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.919, 0.741728, -1.23541 )

[node name="ExplosionParticles" parent="Body" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="ExplosionCPUParticles" parent="Body" instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.970645, 1.28847 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.971, 1.288 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="BurstParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/BurstParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.422606, 0.269419, -2.77351 )

[node name="Right" parent="Body/BurstParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.423, 0.269, -2.774 )

[node name="BurstCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/BurstCPUParticles" instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.422606, 0.269419, -2.77351 )

[node name="Right" parent="Body/BurstCPUParticles" instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.423, 0.269, -2.774 )

[node name="AcidParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657562, 0 )

[node name="Particles" parent="Body/AcidParticles" instance=ExtResource( 20 )]

[node name="AcidCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657562, 0 )

[node name="CPUParticles" parent="Body/AcidCPUParticles" instance=ExtResource( 27 )]

[node name="DeathAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 22 )
unit_size = 4.0
bus = "Effects"

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.503774, 1.6412 )
stream = ExtResource( 25 )
unit_size = 0.1
autoplay = true
bus = "Effects"

[node name="DriftAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
stream = ExtResource( 23 )
unit_size = 0.4
autoplay = true
stream_paused = true
bus = "Effects"

[node name="BurstAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.270128, -2.73565 )
stream = ExtResource( 5 )
unit_size = 0.8
bus = "Effects"

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="GunTriggerTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="ShotTimerMiddle" type="Timer" parent="."]
process_mode = 0
wait_time = 0.07
one_shot = true

[node name="ShotTimerSides" type="Timer" parent="."]
process_mode = 0
wait_time = 0.07
one_shot = true

[node name="ShotgunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.8
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="GunTriggerTimer" to="Body" method="_on_GunTriggerTimer_timeout"]
[connection signal="timeout" from="ShotTimerMiddle" to="Body" method="_on_ShotTimerMiddle_timeout"]
[connection signal="timeout" from="ShotTimerSides" to="Body" method="_on_ShotTimerSides_timeout"]
[connection signal="timeout" from="ShotgunTimer" to="Body" method="_on_ShotgunTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
